[package]
name = "fxtools"
version = "0.2.25"
edition = "2021"
description = "A collection of commandline Fasta/Fastq utility tools"
documentation = "https://docs.rs/fxtools"
repository = "https://github.com/noamteyssier/fxtools"
license = "MIT"
keywords = ["cli", "bioinformatics", "sequencing"]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxread = "0.2.10"
clap = { version = "3", features = ["derive"] }
anyhow = "1"
ndarray-stats = "0.5.0"
ndarray = "0.15.6"
spinoff = "0.5.3"
memchr = "2.5.0"
gzp = { version="0.11.3", features=["deflate_rust"], default-features = false }
regex = "1.9.6"
rand = "0.8.5"
rand_chacha = "0.3.1"
