[package]
name = "fxtools"
version = "0.2.36"
edition = "2021"
description = "A collection of commandline Fasta/Fastq utility tools"
documentation = "https://docs.rs/fxtools"
repository = "https://github.com/noamteyssier/fxtools"
license = "MIT"
keywords = ["cli", "bioinformatics", "sequencing"]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxread = "0.2.12"
clap = { version = "4.5.9", features = ["derive"] }
anyhow = "1"
ndarray-stats = "0.6.0"
ndarray = "0.16.1"
spinoff = "0.8.0"
memchr = "2.7.4"
gzp = { version = "0.11.3", features = [
    "deflate_rust",
], default-features = false }
regex = "1.10.5"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
bstr = "1.9.1"
disambiseq = "0.1.11"
hashbrown = "0.14.5"
csv = "1.3.0"
flate2 = "1.0.30"
